--- a/config.env
+++ b/config.env
@@ -1,9 +1,17 @@
-API_ID=6                                  
-API_HASH=eb06d4abfb49dc3eeb1aeb98ae0f581e
+# Required: API credentials from https://my.telegram.org  
+API_ID=xxxxx          # Your Telegram API ID  
+API_HASH=xxxxx        # Your Telegram API Hash  
 
-MONGO_URI=
-BOT_TOKEN=
+# Required: MongoDB connection string from MongoDB Atlas  
+MONGO_URI=xxxxx       # Your MongoDB connection URL  
 
-#SUDO USERID IS OPTIONAL  
-OWNER_USERID = [834836509, 543836509]
-SUDO_USERID  = [834836509, 754836509]          
+# Required: Telegram bot token from @BotFather  
+BOT_TOKEN=xxxxx       # Your Telegram Bot Token  
+
+# Optional: User IDs for bot ownership and elevated privileges  
+OWNER_USERID=[123456789]  # Your Telegram user ID (owner)  
+SUDO_USERID=[]            # List of user IDs with sudo privileges (optional)  
+
+# Required: Telegram channel and log group  
+CHANNEL_ID=-100xxxxxxxxxx  # Your main channel/group ID  
+LOG_CHANNEL=-100xxxxxxxxxx # Your log channel/group ID
